ecsact_interpret/test/errors/cluster_invalid_statement.ecsact
main package cluster_invalid_statement;

cluster {
	component CompA {}
}
